# figma-font-helper

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
assets/: figma.pfx  figma.txt
src/: dto.rs  lib.rs  main.rs  middleware.rs  provider.rs  query.rs  serverstate.rs
src/dto/: error.rs  fontfiles.rs  version.rs
src/middleware/: allowonlyfigma.rs
src/provider/: fontdatabase.rs  fontprovider.rs  mod.rs  platform.rs
src/provider/platform/: fontprovider.rs  linux.rs  mod.rs
src/providers/: fontdatabase.rs
src/providers/platform/: linux.rs  mod.rs
src/query/: fontfile.rs  fontfiles.rs  update.rs
src/route/: fontfile.rs  fontfiles.rs  mod.rs  update.rs  version.rs
src/routes/: fontfiles.rs
