[package]
name = "figma-font-helper"
version = "0.1.0"
authors = ["TheAifam5 <theaifam5@gmail.com>"]
edition = "2018"
publish = false

[lib]
name = "ffh"
path = "src/lib.rs"

[[bin]]
name = "ffh"
path = "src/main.rs"

[dependencies]
actix-rt = "~1.1"
actix-web = { version = "~2.0", features = ["openssl", "compress"] }
actix-files = "~0.2"
actix-service = "~1.0"
openssl = "~0.10"

futures = "~0.3"
log = "~0.4"
log4rs = "~0.13"
serde = { version = "~1.0", features = ["derive"] }

anyhow = "~1.0"
thiserror = "~1.0"
strum = "~0.18"
strum_macros = "~0.18"

chrono = "~0.4"
