[package]
name = "figma-font-helper"
version = "0.1.0"
authors = ["TheAifam5 <theaifam5@gmail.com>"]
edition = "2021"
publish = false

[lib]
name = "ffh"
path = "src/lib.rs"

[[bin]]
name = "ffh"
path = "src/main.rs"

[features]
default = ["openssl"]
rustls = ["actix-web/rustls"]
openssl = ["actix-web/openssl"]

[lints.rust]
rust_2018_idioms = "deny"
rust_2018_compatibility = "deny"

[dependencies]
actix-rt = "~2.10"
actix-web = "~4.8"
actix-files = "~0.6"
actix-service = "~2.0"
openssl = "~0.10"

cfg-if = "~1.0"
futures = "~0.3"
log = "~0.4"
log4rs = "~1.3"
serde = { version = "~1.0", features = ["derive"] }

anyhow = "~1.0"
thiserror = "~1.0"
strum = "~0.26"
strum_macros = "~0.26"

chrono = "~0.4"
